Document English translation

--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -1,34 +1,34 @@
 \thispagestyle{empty}
 
 \begin{center}
-{\large\bfseries Título \\ Subtítulo }\\
+{\large\bfseries Title  \\ Subtitle }\\
 \end{center}
 \begin{center}
-Nombre Del Estudiante\\
+Salvador Corts Sánchez\\
 \end{center}
 
 %\vspace{0.7cm}
 
 \vspace{0.5cm}
-\noindent{\textbf{Palabras clave}: \textit{software libre}
+\noindent{\textbf{Keywords}: \textit{Open Source}
 \vspace{0.7cm}
 
-\noindent{\textbf{Resumen}\\
+\noindent{\textbf{Abstract}\\
 	
 
 \cleardoublepage
 
 \begin{center}
-	{\large\bfseries Same, but in English}\\
+	{\large\bfseries Título y Subtitulo}\\
 \end{center}
 \begin{center}
-	Student's name\\
+	Salvador Corts Sánchez\\
 \end{center}
 \vspace{0.5cm}
-\noindent{\textbf{Keywords}: \textit{open source}, \textit{floss}
+\noindent{\textbf{Palabras Clave}: \textit{Software Libre}, \textit{floss}
 \vspace{0.7cm}
 
-\noindent{\textbf{Abstract}\\
+\noindent{\textbf{Resumen}\\
 
 
 \cleardoublepage
@@ -61,7 +61,7 @@ Y para que conste, expiden y firman el presente informe en Granada a Junio de 20
 
 \noindent \textbf{(nombre completo tutor/a/es)}
 
-\chapter*{Agradecimientos}
+\chapter*{Acknowledgments}
 
 
 
