--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -1,8 +1,8 @@
-\chapter{Planificación}
+\chapter{Planification}
 
-\section{Metodología utilizada}
+\section{Methodology}
 
 
-\section{Temporización}
+\section{Time estimation}
 
-\section{Seguimiento del desarrollo}
+\section{Development follow up}
