--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -21,11 +21,11 @@ The overall objective of this project is to provide a common platform for both r
 \begin{itemize}
     \item Provide a web-browser based interface to contribute to solving problems in a way that the amount of effort the user needs to invest in order to start contributing is minimized.
     
-    \item Design a common middleware to communicate nodes within different network to avoid single points of failure as well by providing a scalable and partition-tolerant Peer-to-Peer design.
+    \item Design a common middleware to communicate nodes within different network to avoid single points of failure as well as providing a scalable and partition-tolerant Peer-to-Peer design.
     
     \item Benchmark the performance of the platform by running different evolutionary metaheuristics in order to compare it against traditional non-distributed implementations.
     
-    \item Enable the user to dynamically upload problems to the system so on one hand researchers can submit new projects and contributors can select which project to contribute to from a catalogue of available problems.
+    \item Enable the user to dynamically upload problems to the system so researchers can submit new projects and contributors can select which project to contribute to from a catalogue of available problems.
     
     \item Extract metrics from the platform in order to provide feedback to both contributors and researchers about the overall state of the execution of the algorithm.
 \end{itemize}
