--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -19,9 +19,9 @@ We cannot control how the users of the platform will behave in terms of how much
 The overall objective of this project is to provide a common platform where researchers and contributors run Evolutionary Algorithms in a distributed way while minimizing the effort they need to make in order to do so. We can break it down in the following objectives:
 
 \begin{itemize}
-    \item Minimize the effort a user needs to make in order to upload a new problem to the platform or start collaborating with an already existing problem. 
+    \item Maximize engagement of the browser-based contributor user.
     
-    \item Minimize the number of single points of failure within the system while providing a scalable and partition-resilient design where nodes are heterogeneous and ephemeral.
+    \item Provide a fault-tolerant design capable of working with heterogeneous and ephemeral nodes.
     
-    \item Evaluate the performance of the platform against a non-distributed implementation.
+    \item Achieve higher performance level than a non-distributed implementation.
 \end{itemize}
