Problem description. The necessity for collab science.

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -16,9 +16,39 @@
  year = {2015},
  isbn = {3662448734, 9783662448731},
  edition = {2nd},
- publisher = {Springer Publishing Company, Incorporated},
+ publisher = {Springer Publishing Company, Incorporated}
 } 
 
+@article{computing-in-science,
+author = {Hannay, Jo and MacLeod, Carolyn and Singer, Janice and Langtangen, Hans Petter and Pfahl, Dietmar and Wilson, Greg},
+year = {2009},
+month = {05},
+pages = {1-8},
+title = {How Do Scientists Develop and Use Scientific Software?},
+volume = {0},
+isbn = {978-1-4244-3737-5},
+journal = {Software Engineering for Computational Science and Engineering, ICSE Workshop on},
+doi = {10.1109/SECSE.2009.5069155}
+}
+
+
+@misc{ideal-alhambra,
+	author       = {EFE}, 
+	title        = {La UGR estrena el supercomputador 'Alhambra', que reduce 10 veces el tiempo de cálculo científico},
+	howpublished = {\url{https://www.ideal.es/miugr/noticias/cabeza-supercomputacion-nuevo-ordenador-201311201348.html}}
+}
+
+@misc{oak-ridge,
+	author       = {Elijah Wolfson}, 
+	title        = {The US passed China with a supercomputer capable of as many calculations per second as 6.3 billion humans},
+	howpublished = {\url{https://qz.com/1301510/the-us-has-the-worlds-fastest-supercomputer-again-the-200-petaflop-summit/}}
+}
+
+@misc{boinc-website,
+	author       = {University of California}, 
+	title        = {BOINC - Compute for Science },
+	howpublished = {\url{https://boinc.berkeley.edu/}}
+}
 
 
 
