--- a/doc/secciones/02_descripcion.tex
+++ b/doc/secciones/02_descripcion.tex
@@ -1,2 +1,19 @@
 \chapter{Problem description}
+\section{The necessity of a distributed system for collaborative science}
+Nowadays, computers play an essential role in scientific research. For most scientists, a desktop machine is enough to store and process the data they work with, but a considerable amount of them need supercomputers to be able to deal with very complex problems \cite{computing-in-science}.
 
+Supercomputers are expensive, price varies depending on their power; For example, a supercomputer with a power of 40 TFLOPS like \textit{Alhambra}, the supercomputer at the \textit{University of Granada}, costs around \$670,000\cite{ideal-alhambra}. A supercomputer leading the list Top500,  like the one from \textit{Oak Ridge National Laboratory}, with 200 PetaFLOPS manufactured by IBM costs \$200 million\cite{oak-ridge}. Hence having access to one of these machines is not easy.
+
+Distributed systems are an attractive alternative to supercomputers. A distributed system can be defined as a set of independent machines that communicate with each other working together for the same goal. Even though this approach is much cheaper than using a supercomputer, an important investment is required in order to buy and set up these machines.
+
+In 2002, the University of California, Berkeley addressed the problem described above by developing \textit{BOINC}\cite{boinc-website}, a platform for volunteer computing where users can contribute to scientific research with their computers or smart-phones. At the moment this chapter was written, the platform has achieved a power of over 27 PetaFLOPS in the last twenty-four hours by using 563,506 computers provided by 142,911 volunteers.
+
+Even though BOINC is a successful example of how volunteer computing is possible and what it can achieve, it still has several problems that this project aims to solve: a user willing to volunteer on BOINC needs to download and set up his own machine in order to start collaborating with a project: non-tech-savvy users can struggle with this and may give up soon.
+
+This project addresses this problem by providing users a way to collaborate where they do not need to install anything apart from a web browser. Since most (if not all) consumer-oriented operative systems such as Ubuntu, Mac OSX or Windows come with a web-browser installed out of the box, this platform provides a zero-installation method for volunteer computing.
+
+\section{Evolutionary Algorithms}
+
+\section{Distributed Systems}
+
+\section{Technosocial Systems}
