--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -50,6 +50,12 @@ doi = {10.1109/SECSE.2009.5069155}
 	howpublished = {\url{https://boinc.berkeley.edu/}}
 }
 
+@misc{galist,
+	author       = {}, 
+	title        = {Genetic Algorithms},
+	howpublished = {\url{http://www.aic.nrl.navy.mil/galist/}}
+}
+
 
 
 
