Cmplete traft of 2.3

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -56,8 +56,65 @@ doi = {10.1109/SECSE.2009.5069155}
 	howpublished = {\url{http://www.aic.nrl.navy.mil/galist/}}
 }
 
+@misc{wikipedia_cap,
+	author       = {}, 
+	title        = {CAP Theorem},
+	howpublished = {\url{https://en.wikipedia.org/wiki/CAP_theorem}}
+}
+
+@misc{cap-example,
+	author       = {Michael Whittaker}, 
+	title        = {An Illustrated Proof of the CAP Theorem},
+	howpublished = {\url{https://mwhittaker.github.io/blog/an_illustrated_proof_of_the_cap_theorem/}}
+}
+
+@book{p2p-principles,
+author = {Hieu Vu, Quang and Lupu, Mihai and Chin Ooi, Beng},
+year = {2010},
+month = {01},
+pages = {},
+title = {Peer-to-Peer Computing - Principles and Applications.},
+isbn = {978-3-642-03513-5},
+journal = {Peer-to-Peer Computing: Principles and Applications},
+doi = {10.1007/978-3-642-03514-2}
+}
+
+@article{structured-p2p,
+author = {Filali, Imen and Bongiovanni, Francesco and Huet, Fabrice and Baude, Françoise},
+year = {2011},
+month = {01},
+pages = {20-55},
+title = {A Survey of Structured P2P Systems for RDF Data Storage and Retrieval},
+volume = {3},
+journal = {T. Large-Scale Data- and Knowledge-Centered Systems},
+doi = {10.1007/978-3-642-23074-5_2}
+}
+
+@article{dht,
+ author = {Stoica, Ion and Morris, Robert and Karger, David and Kaashoek, M. Frans and Balakrishnan, Hari},
+ title = {Chord: A Scalable Peer-to-peer Lookup Service for Internet Applications},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ issue_date = {October 2001},
+ volume = {31},
+ number = {4},
+ month = aug,
+ year = {2001},
+ issn = {0146-4833},
+ pages = {149--160},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/964723.383071},
+ doi = {10.1145/964723.383071},
+ acmid = {383071},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
 
 
+@misc{bittorrent,
+	author       = {}, 
+	title        = {BitTorrent},
+	howpublished = {\url{https://en.wikipedia.org/wiki/BitTorrent}}
+}
 
 
 
