--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -22,6 +22,8 @@
 \usepackage{graphicx}
 \usepackage{tabularx}
 \usepackage{booktabs}
+\usepackage{wrapfig} % Wrap images with text
+\usepackage{subcaption} 
 
 \usepackage[table,xcdraw]{xcolor}
 \hypersetup{
